structure modified
