# src/controllers/user.ts
@@ -1,34 +1,19 @@
-import { UserComponent } from "../components/user"
-/**
- * @method create
- * @method delete
- */
+import { User } from "../components/user"
+
 class UserController {
-  /**
-   * @param {Object} user
-   * @returns {Object} user
-   */
-  public create = async (user: UserComponent.IUser) => {
-    return user
-  }
 
-  /**
-   * @param {string} id
-   * @returns {object}
-   */
-  public delete = async (id: string) => {
-    return { success: true }
-  }
-
-  public get = async (id: number): Promise<UserComponent.IUser> => {
-    const user: UserComponent.IUser = {
-      firstName: "Meraj Ahmad",
-      lastName: "Siddiqui",
-      age: 24,
-      emailId: `msiddiqui.jmi${id}@gmail.com`
+  public getUser = (id: number): User => {
+    const newUser: User = {
+      id: id,
+      name : {
+        first : "Meraj Ahmad",
+        last: "Siddiqui"
+      },
+      email : "merajsiddiqui@outlook.com",
+      phoneNumbers : [ "+91-9990166950" ]
     }
-    return user
+    return newUser
   }
 }
 
-export { UserController }
+export {UserController}
